# missing-person-board

./: Cargo.toml  package.json
mpb-react/: package-lock.json  package.json
mpb-react/src/: App.js  config.js  index.js
mpb-react/src/components/: Bulletin.js  BulletinList.js  CreateBulletin.js
src/: lib.rs
